--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       <a href="index.html" class="active">Home</a>
       <a href="products.html">products</a>
       <a href="signupLogin.html">Login</a>
-      <a href="contectUs.html">contect</a>
+      <a href="contactUs.html">contect</a>
       <a href="about.html">About</a>
     </div>
 
@@ -56,5 +56,10 @@
     </section>
 
   </div>
+
+  <footer>
+    All rights reserved to Tasty Bistro © copyright 
+  </footer>
+  
 </body>
 </html>
