--- a/signupLogin.html
+++ b/signupLogin.html
@@ -33,7 +33,7 @@
   <a href="index.html" class="active">Home</a>
   <a href="products.html">products</a>
   <a href="signupLogin.html">Login</a>
-  <a href="contectUs.html">contect</a>
+  <a href="contactUs.html">contect</a>
   <a href="about.html">About</a>
 </div>
 
@@ -42,6 +42,10 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   </head>
 
+  <footer>
+    All rights reserved to Tasty Bistro © copyright 
+  </footer>
+  
 <body>
 
 
